package org.algo3.SistemaAtaque;

public interface SistemaAtaque {
    int realizarAtq(int puntosDeDefensa);

    int puntaje();

}
